# agentverse

./: .env.example  .gitignore  Dockerfile.backend  README.md  SCRIPT.md  docker-compose.yml  seed.py  seed_agents.py
agents/: momentum_agent.py  price_feed_agent.py  risk_agent.py  sentiment_agent.py  server.py
backend/: database.py  main.py  migrate.py  queue.py  requirements.txt  worker.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: AgentGraph.js  globals.css  layout.js  page.js
frontend/app/agents/[id]/: page.js
frontend/app/api/verify-worldid/: route.js
frontend/app/components/: AgentCity.js  ChallengesView.js  DeveloperView.js  ErrorBoundary.js  ExperimentalWorld.js  HogwartsWorld.js  LasVegasWorld.js  LobbySelect.js  MarketplaceView.js  MatrixWorld.js  Playground.js  SimsWorld.js  Toast.js  TomorrowlandWorld.js  WalletButton.js  WalletProvider.js  WorldOverlay.js
frontend/app/docs/: page.js
frontend/app/lib/: colors.js  config.js  useAuth.js  useMyUsername.js  x402.js
frontend/app/providers/: MiniKitProvider.jsx
frontend/app/reset-password/: page.js
sdk/: pyproject.toml
sdk/agentverse/: __init__.py  cli.py  client.py
