[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentverse"
version = "1.0.0"
description = "SDK and CLI for publishing AI agents on AgentVerse"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
agentverse = "agentverse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentverse*"]
